--- a/index.html
+++ b/index.html
@@ -1,101 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Rose Day</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #ff758c, #ff7eb3);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
+<meta charset="UTF-8">
+<title>Rose Day</title>
 
-    .card {
-      background: rgba(255, 255, 255, 0.15);
-      padding: 30px;
-      border-radius: 15px;
-      text-align: center;
-      color: white;
-      max-width: 350px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-    }
+<style>
+  body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+  }
 
-    .rose {
-      font-size: 60px;
-      animation: float 3s infinite ease-in-out;
-    }
+  .card {
+    background: rgba(255,255,255,0.15);
+    padding: 30px;
+    border-radius: 15px;
+    text-align: center;
+    color: white;
+    max-width: 350px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  }
 
-    @keyframes float {
-      0% { transform: translateY(0); }
-      50% { transform: translateY(-15px); }
-      100% { transform: translateY(0); }
-    }
+  .rose {
+    font-size: 60px;
+    animation: float 3s infinite ease-in-out;
+  }
 
-    p {
-      line-height: 1.6;
-      font-size: 16px;
-    }
+  @keyframes float {
+    0% { transform: translateY(0); }
+    50% { transform: translateY(-15px); }
+    100% { transform: translateY(0); }
+  }
 
-    button {
-      padding: 12px 25px;
-      margin: 10px;
-      border: none;
-      border-radius: 25px;
-      font-size: 16px;
-      cursor: pointer;
-    }
+  button {
+    padding: 12px 25px;
+    margin: 10px;
+    border: none;
+    border-radius: 25px;
+    font-size: 16px;
+    cursor: pointer;
+  }
 
-    #yes {
-      background: #ff4d6d;
-      color: white;
-    }
+  #yes {
+    background: #ff4d6d;
+    color: white;
+  }
 
-    #no {
-      background: #f1f1f1;
-      color: #333;
-    }
+  #no {
+    background: #f1f1f1;
+    color: #333;
+  }
 
-    .message {
-      margin-top: 20px;
-      font-size: 16px;
-      display: none;
-    }
-  </style>
+  .message {
+    margin-top: 20px;
+    display: none;
+    font-size: 16px;
+  }
+
+  /* FULL SCREEN PHOTO */
+  #photoScreen {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #photoScreen img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+</style>
 </head>
+
 <body>
 
-  <div class="card">
-    <div class="rose">🌹</div>
-    <h2>Happy Rose Day</h2>
-    <p>
-      ARUN,<br>
-      this rose is not just a flower,<br>
-      it carries what my heart feels.
-    </p>
+<div class="card" id="mainCard">
+  <div class="rose">🌹</div>
+  <h2>Happy Rose Day</h2>
+  <p>
+    ARUN,<br>
+    this rose carries what my heart feels.<br>
+    Will you accept it?
+  </p>
 
-    <button id="yes" onclick="yesClick()">Yes</button>
-    <button id="no" onclick="noClick()">No</button>
+  <button id="yes" onclick="showPhoto()">Yes</button>
+  <button id="no" onclick="showNo()">No</button>
 
-    <div id="msg" class="message"></div>
-  </div>
+  <div id="msg" class="message"></div>
+</div>
 
-  <script>
-    function yesClick() {
-      document.getElementById("msg").style.display = "block";
-      document.getElementById("msg").innerHTML =
-        "Thank you for accepting my rose.<br>It means more to me than you know.";
-    }
+<!-- FULL SCREEN PHOTO -->
+<div id="photoScreen">
+  <img src="photo.jpg" alt="Rose Day Photo">
+</div>
 
-    function noClick() {
-      document.getElementById("msg").style.display = "block";
-      document.getElementById("msg").innerHTML =
-        "I understand…<br>Even if you say no,<br>this rose will always stay for you.";
-    }
-  </script>
+<script>
+  function showPhoto() {
+    document.getElementById("mainCard").style.display = "none";
+    document.getElementById("photoScreen").style.display = "flex";
+  }
+
+  function showNo() {
+    const msg = document.getElementById("msg");
+    msg.style.display = "block";
+    msg.innerHTML =
+      "I understand…<br>Even if you say no,<br>this rose will always stay for you.";
+  }
+</script>
 
 </body>
 </html>
