--- a/index.html
+++ b/index.html
@@ -1,121 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Rose Day</title>
-
+<title>Rose Day – Arun</title>
 <style>
-  body {
-    margin: 0;
-    height: 100vh;
-    background: linear-gradient(135deg, #ff758c, #ff7eb3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
-  }
+body{
+  margin:0;
+  height:100vh;
+  background:#111;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-family: Arial, sans-serif;
+}
 
-  .card {
-    background: rgba(255,255,255,0.15);
-    padding: 30px;
-    border-radius: 15px;
-    text-align: center;
-    color: white;
-    max-width: 350px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-  }
+.overlay{
+  background:rgba(0,0,0,0.7);
+  color:white;
+  text-align:center;
+  padding:30px;
+  border-radius:15px;
+  position:relative;
+}
 
-  .rose {
-    font-size: 60px;
-    animation: float 3s infinite ease-in-out;
-  }
+button{
+  padding:12px 25px;
+  margin:10px;
+  border:none;
+  border-radius:25px;
+  font-size:16px;
+  cursor:pointer;
+}
 
-  @keyframes float {
-    0% { transform: translateY(0); }
-    50% { transform: translateY(-15px); }
-    100% { transform: translateY(0); }
-  }
-
-  button {
-    padding: 12px 25px;
-    margin: 10px;
-    border: none;
-    border-radius: 25px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-
-  #yes {
-    background: #ff4d6d;
-    color: white;
-  }
-
-  #no {
-    background: #f1f1f1;
-    color: #333;
-  }
-
-  .message {
-    margin-top: 20px;
-    display: none;
-    font-size: 16px;
-  }
-
-  /* FULL SCREEN PHOTO */
-  #photoScreen {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: black;
-    justify-content: center;
-    align-items: center;
-  }
-
-  #photoScreen img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+#yes{background:#ff4d6d;color:white;}
+#no{
+  background:#eee;
+  position:absolute;
+}
 </style>
 </head>
 
 <body>
 
-<div class="card" id="mainCard">
-  <div class="rose">🌹</div>
-  <h2>Happy Rose Day</h2>
-  <p>
-    ARUN,<br>
-    this rose carries what my heart feels.<br>
+<div class="overlay" id="box">
+  <h2>🌹 Rose Day 🌹</h2>
+  <p id="msg">
+    ARUN… this rose is for you.<br>
     Will you accept it?
   </p>
-
-  <button id="yes" onclick="showPhoto()">Yes</button>
-  <button id="no" onclick="showNo()">No</button>
-
-  <div id="msg" class="message"></div>
-</div>
-
-<!-- FULL SCREEN PHOTO -->
-<div id="photoScreen">
-  <img src="photo.jpg" alt="Rose Day Photo">
+  <button id="yes" onclick="yesClick()">Yes</button>
+  <button id="no" onclick="noClick()">No</button>
 </div>
 
 <script>
-  function showPhoto() {
-    document.getElementById("mainCard").style.display = "none";
-    document.getElementById("photoScreen").style.display = "flex";
-  }
+let messages = [
+  "ARUN… that hurt a little 😔",
+  "Even a rejected rose still has fragrance.",
+  "I’ll still keep this rose for you.",
+  "Some feelings don’t disappear that easily.",
+  "It’s okay… I just wanted you to know."
+];
 
-  function showNo() {
-    const msg = document.getElementById("msg");
-    msg.style.display = "block";
-    msg.innerHTML =
-      "I understand…<br>Even if you say no,<br>this rose will always stay for you.";
-  }
+let count = 0;
+
+function noClick(){
+  let noBtn = document.getElementById("no");
+  let msg = document.getElementById("msg");
+
+  // Change emotional message
+  msg.innerText = messages[count % messages.length];
+  count++;
+
+  // Move NO button randomly
+  let x = Math.random() * 200 - 100;
+  let y = Math.random() * 150 - 75;
+  noBtn.style.transform = `translate(${x}px, ${y}px)`;
+}
+
+function yesClick(){
+  document.getElementById("box").style.display="none";
+  document.body.style.background =
+    "url('photo.jpg') center/cover no-repeat";
+}
 </script>
 
 </body>
